TestCases/Errors/threaded_movement/observations/win_12_obs.spm
 obs   14-6   0.0017650095972709 
 obs   15-6   0.000407184364197444 
 obs   14-7   0.00142053510469747 
 obs   15-7   0.00126249703445683 
 obs   13-8   0 
 obs   14-8   0.000247990913097874 
 obs   5-10   0.0103044807871294 
 obs   13-10   0.00109090909090909 
 obs   14-10   0.000714097496706192 
 obs   14-11   0.000364389233954451 
 obs   5-12   0.00753846153846154 
 obs   6-12   0.00335097001763668 
 obs   11-12   0.00333333333333333 
 obs   5-13   0.0178717948717949 
 obs   10-13   0.00162337662337662 
 obs   11-13   0.00246753246753247 
 obs   6-14   0.00419753086419753 
 obs   6-15   0.00320987654320988 
 obs   7-17   0.0146666666666667 
 obs   8-18   0.0209742375799311 
 obs   9-18   0.011 
 obs   10-19   0.0031330865952817 
 obs   11-19   0.00551493821967609 
 obs   10-20   0.00422530770356857 
 obs   11-20   0.00153846153846154 
 error_value   14-6   0 
 error_value   15-6   0 
 error_value   14-7   0 
 error_value   15-7   0 
 error_value   13-8   0 
 error_value   14-8   0 
 error_value   5-10   0 
 error_value   13-10   0 
 error_value   14-10   0 
 error_value   14-11   0 
 error_value   5-12   0 
 error_value   6-12   0 
 error_value   11-12   0 
 error_value   5-13   0 
 error_value   10-13   0 
 error_value   11-13   0 
 error_value   6-14   0 
 error_value   6-15   0 
 error_value   7-17   0 
 error_value   8-18   0 
 error_value   9-18   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   10-20   0 
 error_value   11-20   0 
